objects/dbu_LocationChangeDetails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>dbu_Country__c</fullName>
        <label>dbu Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Location_Code__c</fullName>
        <label>dbu Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Product_Location__c</fullName>
        <label>dbu_Product Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>dbu_LocationChangeDetails</label>
</CustomObject>